--- a/index.ipynb
+++ b/index.ipynb
@@ -62,11 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "palermo = neighborhoods"
+    "palermo = neighborhoods[0]"
    ]
   },
   {
