--- a/index.ipynb
+++ b/index.ipynb
@@ -341,22 +341,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<folium.map.Marker at 0x7fc546395828>"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<folium.map.Marker object at 0x7fc546395828>\n"
+     ]
     }
    ],
    "source": [
-    "print(buenos_markers[0]"
+    "print(buenos_markers[0])"
    ]
   },
   {
