--- a/index.ipynb
+++ b/index.ipynb
@@ -388,23 +388,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'marker_six' is not defined",
+     "evalue": "name 'la_boca_marker' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m\u001b[0m",
       "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-25-197cd1fe9114>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mla_boca_marker\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmarker_six\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'marker_six' is not defined"
+      "\u001b[0;32m<ipython-input-27-663faf4883ea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mla_boca_marker\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mmarker_six\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'la_boca_marker' is not defined"
      ]
     }
    ],
    "source": [
-    "la_boca_marker = marker_six"
+    "la_boca_marker == marker_six;"
    ]
   },
   {
