--- a/index.ipynb
+++ b/index.ipynb
@@ -437,22 +437,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7fc54635bb38>"
+       "<folium.map.Marker at 0x7fc54635b2b0>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "neighborhood_markers.pop()"
+    "neighborhood_markers.pop(0)"
    ]
   },
   {
