automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -452,7 +452,7 @@
     }
    ],
    "source": [
-    "neighborhood_markers.pop(0)"
+    "neighborhood_markers.pop(la_boca_market)"
    ]
   },
   {
