--- a/index.ipynb
+++ b/index.ipynb
@@ -437,34 +437,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7fc54635b828>"
+       "<folium.map.Marker at 0x7fc54635b6d8>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "neighborhood_markers.pop()"
+    "neighborhood_markers.pop(-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
+      "2\n",
       "False\n"
      ]
     }
