--- a/index.ipynb
+++ b/index.ipynb
@@ -487,7 +487,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recoleta_marker = ne"
+    "recoleta_marker = neighborhood_markers"
    ]
   },
   {
